methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:22: error: value c is not a member of object java.awt.Color
      if (getGroundColor()==Color.c) {
                                  ^